# QR_code

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main  qrcode.cpp  qrcode.txt
.github/workflows/: build.yml
example/: main.cpp
include/: QRCodeGenerator.h
src/: QRCodeGenerator.cpp
